--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'icomoon';
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
-  font-weight: normal;
-  font-style: normal;
+
+  font-family: "paladins";
+
+  src: url("/fonts/paladins.ttf");
+
 }
 /* =======================================================
 *
@@ -11,6 +11,13 @@
 *	Edit this section
 *
 * ======================================================= */
+
+.paladins {
+
+  font-family: "paladins";
+
+}
+
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-weight: 400;
